--- a/flipped-style/01-basics-of-doe/011-activity-turkey-in-pens.html
+++ b/flipped-style/01-basics-of-doe/011-activity-turkey-in-pens.html
@@ -72,15 +72,15 @@ ul.task-list li input[type="checkbox"] {
 <section id="scenario" class="level2">
 <h2 class="anchored" data-anchor-id="scenario">Scenario</h2>
 <p>We are interested in examining the effect of dietary protein on growth in Standard Bronze farm-raised turkeys. There are 24 turkeys available for the study.</p>
-<p>The turkeys are housed <strong>3 to a pen</strong>, and each pen has a single feed trough, meaning all turkeys within a pen receive the same diet.</p>
+<p>The turkeys are housed 3 to a pen, and each pen has a single feed trough, meaning all turkeys within a pen receive the same diet.</p>
 <p>Two diets are studied:</p>
 <ul>
-<li><strong>Low-protein diet:</strong> 15% protein<br>
+<li>Low-protein diet: 15% protein<br>
 </li>
-<li><strong>High-protein diet:</strong> 30% protein</li>
+<li>High-protein diet: 30% protein</li>
 </ul>
-<p>Diets are assigned <strong>at random to pens</strong>, with <strong>4 pens receiving each diet</strong> (8 pens total).</p>
-<p>The turkeys are fed their assigned diet for 6 weeks. The primary outcome measured on <strong>each turkey</strong> is <strong>average daily weight gain (ADG), in lbs/day</strong>.</p>
+<p>Diets are assigned at random to pens, with 4 pens receiving each diet (8 pens total).</p>
+<p>The turkeys are fed their assigned diet for 6 weeks. The primary outcome measured on each turkey is average daily weight gain (ADG), in lbs/day.</p>
 </section>
 <section id="sketch-a-blueprint-for-this-study." class="level2">
 <h2 class="anchored" data-anchor-id="sketch-a-blueprint-for-this-study.">1. Sketch a blueprint for this study.</h2>
@@ -99,10 +99,10 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="pen-level-data">3. Pen-Level Data</h2>
 <ol type="a">
 <li><p>Open the file <code>turkey_pen_data.csv</code>.</p></li>
-<li><p>What does <strong>each row</strong> in this data file represent?</p></li>
+<li><p>What does each row in this data file represent?</p></li>
 <li><p>How many observations are there per diet? Why?</p></li>
-<li><p>Create a plot of <strong>pen-level ADG</strong> on the y-axis and <strong>Diet</strong> on the x-axis (Hint: each diet should have 4 dots).</p></li>
-<li><p>Create a summary table showing the <strong>mean</strong> and <strong>standard deviation</strong> of pen-level ADG for each diet.</p></li>
+<li><p>Create a plot of pen-level ADG on the y-axis and Diet on the x-axis (Hint: each diet should have 4 dots).</p></li>
+<li><p>Create a summary table showing the mean and standard deviation of pen-level ADG for each diet.</p></li>
 </ol>
 <table class="caption-top table">
 <thead>
@@ -130,10 +130,10 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="animal-level-data">4. Animal-Level Data</h2>
 <ol start="6" type="a">
 <li><p>Open the file <code>turkey_animal_data.csv</code>.</p></li>
-<li><p>What does <strong>each row</strong> in this data file represent? How many rows are there? Why?</p></li>
-<li><p>Create a plot of <strong>animal-level ADG</strong> on the y-axis and <strong>Diet</strong> on the x-axis.</p></li>
-<li><p>How many <strong>measurement units</strong> are there per diet in this plot?</p></li>
-<li><p>Create a summary table showing the <strong>mean</strong> and <strong>standard deviation</strong> of ADG for each diet.</p></li>
+<li><p>What does each row in this data file represent? How many rows are there? Why?</p></li>
+<li><p>Create a plot of animal-level ADG on the y-axis and Diet on the x-axis.</p></li>
+<li><p>How many measurement/sampling units are there per diet in this plot?</p></li>
+<li><p>Create a summary table showing the mean and standard deviation of ADG for each diet.</p></li>
 </ol>
 <table class="caption-top table">
 <thead>
@@ -162,7 +162,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="comparing-analyses" class="level2">
 <h2 class="anchored" data-anchor-id="comparing-analyses">5. Comparing Analyses</h2>
-<p>Now consider a two-sample t-test comparing the <strong>low-protein</strong> and <strong>high-protein</strong> diets.</p>
+<p>Now consider a two-sample t-test comparing the low-protein and high-protein diets.</p>
 <section id="pen-level-analysis" class="level3">
 <h3 class="anchored" data-anchor-id="pen-level-analysis">Pen-level analysis</h3>
 <ol start="12" type="a">
@@ -195,7 +195,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="interpretation" class="level2">
 <h2 class="anchored" data-anchor-id="interpretation">6. Interpretation</h2>
 <ol start="14" type="a">
-<li>Which analysis is <strong>correct</strong> for answering the research question? Explain.</li>
+<li>Which analysis is <em>correct</em> for answering the research question? Explain.</li>
 </ol>
 <p>Your explanation should address:</p>
 <ul>
@@ -212,7 +212,7 @@ ul.task-list li input[type="checkbox"] {
 <ol type="1">
 <li><p>Make sure your submission includes:</p>
 <ul>
-<li>Your <strong>study blueprint sketch</strong></li>
+<li>Your study blueprint sketch</li>
 <li>Your written answers for parts (b)–(n)</li>
 <li>Any requested tables/values from JMP or R</li>
 </ul></li>
