fixed typo on syllabus

--- a/00-course-info/W2026/stat323-syllabus-W2026.html
+++ b/00-course-info/W2026/stat323-syllabus-W2026.html
@@ -2367,7 +2367,7 @@ vertical-align: -.125em;
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Class Preparatin, Participation, &amp; Professionalism</td>
+<td style="text-align: left;">Class Preparation, Participation, &amp; Professionalism</td>
 <td style="text-align: left;">5%</td>
 </tr>
 <tr class="even">
