--- a/flipped-style/02-crd/023-slides-statistical-modeling-crd.html
+++ b/flipped-style/02-crd/023-slides-statistical-modeling-crd.html
@@ -255,7 +255,7 @@
 </section>
 <section id="cell-means-model" class="slide level2">
 <h2>Cell Means Model</h2>
-<p><span class="math display">\[y_{ij} = \mu + \varepsilon_{ij} \text{ with } \varepsilon_{ij} \text{ iid } \sim N(0, \sigma^2)\]</span> for <span class="math inline">\(i = 1, 2, 3\)</span> and <span class="math inline">\(j = 1, 2\)</span></p>
+<p><span class="math display">\[y_{ij} = \mu_i + \varepsilon_{ij} \text{ with } \varepsilon_{ij} \text{ iid } \sim N(0, \sigma^2)\]</span> for <span class="math inline">\(i = 1, 2, 3\)</span> and <span class="math inline">\(j = 1, 2\)</span></p>
 <p>Where:</p>
 <ul>
 <li><p><span class="math inline">\(y_{ij}\)</span> - the <em>observed</em> lap time for the <span class="math inline">\(j^{th}\)</span> runner wearing the <span class="math inline">\(i^{th}\)</span> shoe type.</p></li>
@@ -357,7 +357,7 @@
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="images/023-shoe-type-sum-to-zero.png" style="width:100.0%"></p>
+<p><img data-src="images/023-shoe-type-sum-to-zero.png" style="width:80.0%"></p>
 </figure>
 </div>
 </div>
@@ -388,7 +388,7 @@
 <div class="cell-output-display">
 <div>
 <figure>
-<p><img data-src="images/023-shoe-type-set-to-zero.png" style="width:100.0%"></p>
+<p><img data-src="images/023-shoe-type-set-to-zero.png" style="width:80.0%"></p>
 </figure>
 </div>
 </div>
