typos on activity

--- a/flipped-style/02-crd/021-activity-intro-to-crd.html
+++ b/flipped-style/02-crd/021-activity-intro-to-crd.html
@@ -2489,7 +2489,7 @@ Note
 <p><span class="math inline">\(\bar y_{1\cdot}\)</span> = _________</p>
 <p><span class="math inline">\(\bar y_{2\cdot}\)</span> = _________</p>
 <p><span class="math inline">\(\bar y_{3\cdot}\)</span> = _________</p>
-<p>for <span class="math inline">\(i=1\)</span> (Pretimed), <span class="math inline">\(i=2\)</span> (Semi-actuated), <span class="math inline">\(j=3\)</span> (Fully actuated)</p>
+<p>for <span class="math inline">\(i=1\)</span> (Pretimed), <span class="math inline">\(i=2\)</span> (Semi-actuated), <span class="math inline">\(i=3\)</span> (Fully actuated)</p>
 <ul>
 <li>Show (by hand, using a calculator) how the SSE is calculated:</li>
 </ul>
@@ -2525,7 +2525,7 @@ Note
 <tr class="odd">
 <td>Total</td>
 <td>14</td>
-<td>1349.45</td>
+<td>1340.45</td>
 <td></td>
 <td></td>
 <td></td>
@@ -2564,7 +2564,7 @@ mod &lt;- lm()</code></pre>
 <li><p><span class="math inline">\(\hat \tau_2\)</span> = ___________</p></li>
 <li><p><span class="math inline">\(\hat \tau_3\)</span> = ___________</p></li>
 </ul>
-<p>for <span class="math inline">\(i=1\)</span> (Pretimed), <span class="math inline">\(i=2\)</span> (Semi-actuated), <span class="math inline">\(j=3\)</span> (Fully actuated).</p>
+<p>for <span class="math inline">\(i=1\)</span> (Pretimed), <span class="math inline">\(i=2\)</span> (Semi-actuated), <span class="math inline">\(i=3\)</span> (Fully actuated).</p>
 </section>
 <section id="f.-interpret-parameter-estimates" class="level2">
 <h2 class="anchored" data-anchor-id="f.-interpret-parameter-estimates">f. Interpret Parameter Estimates</h2>
