update the name of the activity

--- a/flipped-style/06-random-and-mixed/061-activity-color-interference.html
+++ b/flipped-style/06-random-and-mixed/061-activity-color-interference.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Activity 5.1: Reducing Variability with Blocking</title>
+<title>Activity 6.1: Random Block Effect vs Paired t-test</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -2312,8 +2312,8 @@ window.Quarto = {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Activity 5.1: Reducing Variability with Blocking</h1>
-<p class="subtitle lead">Advertising Strategies</p>
+<h1 class="title">Activity 6.1: Random Block Effect vs Paired t-test</h1>
+<p class="subtitle lead">Color Interference</p>
 </div>
 
 
