--- a/flipped-style/06-random-and-mixed/061-activity-color-interference.html
+++ b/flipped-style/06-random-and-mixed/061-activity-color-interference.html
@@ -2426,7 +2426,7 @@ Tip
 <section id="d.-now-using-the-tools-you-learned-in-module-6-and-the-treatment-and-design-structure-you-specified-in-a-fit-the-appropriate-model.-report-the-following" class="level2">
 <h2 class="anchored" data-anchor-id="d.-now-using-the-tools-you-learned-in-module-6-and-the-treatment-and-design-structure-you-specified-in-a-fit-the-appropriate-model.-report-the-following">d. Now, using the tools you learned in Module 6 and the treatment and design structure you specified in (a), fit the appropriate model. Report the following:</h2>
 <ul>
-<li><span class="math inline">\(\hat\sigma_{blk} =\)</span> _____________ and <span class="math inline">\(\hat\sigma_\epsilon =\)</span> _______________</li>
+<li><span class="math inline">\(\hat\sigma^2_{blk} =\)</span> _____________ and <span class="math inline">\(\hat\sigma^2_\epsilon =\)</span> _______________</li>
 </ul>
 <ul>
 <li>Supporting evidence: F = __________; df = ____, _____; p = __________)</li>
